--- a/code.html
+++ b/code.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-  <head></head>
+  <head>
+    <link rel="stylesheet" href="codee.css" >
+  </head>
   <body>
     <div class="bg-container">
      <h1 class="rahul-heading">Rahul</h1>
